train data is increase with psuedo labelling, training is carried out with all data

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,29 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[dynet] random seed: 1830085866\n",
-      "[dynet] allocating memory: 512MB\n",
-      "[dynet] memory allocation done.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2021-09-07 22:19:45,407 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 116} - Loading Pre-Trained Model\n",
-      "2021-09-07 22:19:46,407 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 119} - Ready\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pp.morph_analyzer import MorphAnalyzer\n",
     "ma = MorphAnalyzer()"
@@ -50,110 +32,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['üniversite+Noun+A3sg+Pnon+Nom',\n",
-       " 'sınav+Noun+A3pl+P3sg+Dat',\n",
-       " 'can+Noun+A3sg+Pnon+Ins',\n",
-       " 'baş+Noun+A3sg+Pnon+Ins',\n",
-       " 'çalış+Verb+Pos+Prog1+A3pl+Past']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ma.predict(\"üniversite sınavlarına canla başla çalışıyorlardı\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['şimdi+Adverb', 'baş+Noun+A3sg+Pnon+Abl', 'başla+Verb+Pos+Imp+A2sg']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ma.predict(\"şimdi baştan başla\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['koş+Verb+Pos+Imp+A2sg',\n",
-       " 'da+Conj',\n",
-       " 'top+Noun+A3sg+P3sg+Nom',\n",
-       " 'at+Verb+Pos+Imp+A2sg']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ma.predict(\"koş da topu at\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['baba+Noun+A3sg+P1sg+Nom',\n",
-       " 'ben+Pron+Pers+A1sg+Pnon+Dat',\n",
-       " 'at+Noun+A3sg+Pnon+Nom',\n",
-       " 'al+Verb+Pos+Past+A3sg']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ma.predict(\"babam bana at aldı\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['başar+Verb+Pos^DB+Verb+Able^DB+Noun+PastPart+A3pl+P1sg+Gen']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ma.predict(\"başarabildiklerimin\")"
    ]
@@ -167,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,40 +96,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Ben', 'O'),\n",
-       " ('Melikşah', 'PER'),\n",
-       " (',', 'O'),\n",
-       " ('28', 'O'),\n",
-       " ('yaşındayım', 'O'),\n",
-       " (',', 'O'),\n",
-       " ('İstanbul', 'LOC'),\n",
-       " (\"'\", 'O'),\n",
-       " ('da', 'O'),\n",
-       " ('ikamet', 'O'),\n",
-       " ('ediyorum', 'O'),\n",
-       " ('ve', 'O'),\n",
-       " ('VNGRS', 'ORG'),\n",
-       " ('AI', 'ORG'),\n",
-       " ('Takımı', 'ORG'),\n",
-       " (\"'\", 'O'),\n",
-       " ('nda', 'O'),\n",
-       " ('çalışıyorum', 'O'),\n",
-       " ('.', 'O')]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ner.predict(\"Ben Melikşah, 28 yaşındayım, İstanbul'da ikamet ediyorum ve VNGRS AI Takımı'nda çalışıyorum.\")"
+    "ner.predict(\"Benim adım Melikşah, 28 yaşındayım, İstanbul'da ikamet ediyorum ve VNGRS AI Takımı'nda Aydın ile birlikte çalışıyorum.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ner.predict(\"Cumhurbaşkanı Ahmet Necdet Sezer'in açıklamalarına göre Ankara'daki TBMM 3 gün daha tatil kalacak\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ner.predict(\"Meryem Beşer ile birlikte önce Bursa'ya oradan da İzmir'e gittik, haftasonunu Foça'da geçirdik.\")"
    ]
   },
   {
@@ -233,18 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2021-09-07 22:20:53,256 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 116} - Loading Pre-Trained Model\n",
-      "2021-09-07 22:20:54,320 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 119} - Ready\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pp.normalizer import Normalizer\n",
     "n = Normalizer()"
@@ -252,33 +149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['test',\n",
-       " 'için',\n",
-       " 'yazdığım',\n",
-       " 'bir',\n",
-       " 'cümledir',\n",
-       " 'kasıtlı',\n",
-       " 'yazım',\n",
-       " 'hatası',\n",
-       " 'ekliyorum',\n",
-       " 'adım',\n",
-       " 'melikşah',\n",
-       " 'türker',\n",
-       " 'yaşım',\n",
-       " 'yirmisekiz']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sentence = \"Test için yâzdığîm 1 cümledir. Kasitli yazişm hatasıı ekliyoruum. Adim meliksah turker, yasim 28.\"\n",
     "n.normalize(sentence.split(\" \"), normalize_via_levenshtein=True, deascify=True)"
@@ -286,20 +159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['böyle', 'şey', 'görmedim', 'duymadım']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sentence = \"boyle sey gormedim duymadim\"\n",
     "n.normalize(sentence.split(\" \"), deascify= True)"
@@ -314,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,41 +186,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Av. Meryem Beşer, 3.5 yıldır süren dava ile ilgili dedi ki, \"Duruşma bitti, dava lehimize sonuçlandı.\"',\n",
-       " 'Bu harika bir haber!']"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ss.split_sentences('Av. Meryem Beşer, 3.5 yıldır süren dava ile ilgili dedi ki, \"Duruşma bitti, dava lehimize sonuçlandı.\" Bu harika bir haber!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['4. Murat, diğer yazım şekli ile IV. Murat, alkollü içecekleri halka yasaklamıştı.']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ss.split_sentences('4. Murat, diğer yazım şekli ile IV. Murat, alkollü içecekleri halka yasaklamıştı.')"
    ]
@@ -375,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,37 +233,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['bugün', 'kahvaltıda', 'kahve', 'çay', 'içsem', 'süt', 'içeyim']"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sr.drop_stop_words(sentence.split(\" \"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2021-09-07 22:21:50,917 - root - INFO - 60} - Dynamically detected stopwords are: ama, aşı, çok, telefon, gelip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sentence = \"ben bugün aşı olacağım sonra da eve gelip telefon açacağım aşı nasıl etkiledi onu anlatırım telefon aşı olmak bu dönemde çok ama ama ama ama çok önemli\"\n",
     "sr.dynamically_detect_stop_words(sentence.split(\" \"))"
@@ -432,27 +252,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['ama', 'aşı', 'çok', 'telefon', 'gelip']"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sr.dynamic_stop_words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,68 +270,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['bizi', 'gereği', 've', 'ettiğini', 'nerede', 'yapıyor', 'onlara',\n",
-       "       'bazen', 'ediliyor', 'ama'], dtype='<U11')"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.random.choice(sr.stop_words, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2021-09-07 22:21:50,935 - root - INFO - 67} - List of stop words is unified and updated.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sr.unify_stop_words()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['a',\n",
-       " 'acaba',\n",
-       " 'ama',\n",
-       " 'ancak',\n",
-       " 'arada',\n",
-       " 'artık',\n",
-       " 'asla',\n",
-       " 'aslında',\n",
-       " 'ayrıca',\n",
-       " 'az',\n",
-       " 'aşı']"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sr.stop_words[:11]"
    ]
@@ -536,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,35 +313,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(\"Beşiktaş'tan\",\n",
-       " 'vapura',\n",
-       " 'binip',\n",
-       " \"Kadıköy'e\",\n",
-       " 'geçtim.',\n",
-       " 'E-mail',\n",
-       " 'adresim',\n",
-       " 'turkermeliksah@hotmail.com.',\n",
-       " 'İnternette',\n",
-       " 'boğaziçi',\n",
-       " \"hashtag'ini\",\n",
-       " 'gördüm.',\n",
-       " 'türk',\n",
-       " 'hava',\n",
-       " 'yolları',\n",
-       " 'test')"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pp.tokenizer import Tokenizer\n",
     "t = Tokenizer()\n",
@@ -582,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,40 +333,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[\"Beşiktaş'tan\",\n",
-       " 'vapura',\n",
-       " 'binip',\n",
-       " \"Kadıköy'e\",\n",
-       " 'geçtim',\n",
-       " '.',\n",
-       " 'E-mail',\n",
-       " 'adresim',\n",
-       " 'turkermeliksah@hotmail.com',\n",
-       " '.',\n",
-       " 'İnternette',\n",
-       " '#boğaziçi',\n",
-       " \"hashtag'ini\",\n",
-       " 'gördüm',\n",
-       " '.',\n",
-       " 'türk',\n",
-       " 'hava',\n",
-       " 'yolları',\n",
-       " 'test']"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t = TweetTokenizer()\n",
     "t.tokenize(sentence)"
